syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.grpc";
option java_outer_classname = "Demo";
option objc_class_prefix = "HLW";

package com.grpc;

service Greater {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}